--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
-org.gradle.jvmargs=-Xmx4g
+android.nonTransitiveRClass=true
+android.useAndroidX=true
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options\="-Xmx2g" -Dfile.encoding\=UTF-8
