--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,29 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Required for fetching data from GitHub -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:theme="@style/Theme.Test">
-        <activity android:name=".MainActivity" android:exported="true"
-        android:enableOnBackInvokedCallback="true">
+
+    <application
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="Test App"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.PriceViewer"
+        tools:targetApi="35">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="Test App"
+            android:theme="@style/Theme.Test">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.content.Intent.action.MAIN" />
+                <category android:name="android.content.Intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
