--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
+android.builtInKotlin=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options\="-Xmx2g" -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options\="-Xmx4g" -Dfile.encoding\=UTF-8
